# poly_simulator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  apiClient.js  apiClient.test.js  config.js  index.css  main.jsx  social.js  theme.css
frontend/src/components/: Footer.jsx  MobileBottomNav.jsx  Navbar.jsx  footer.css  mobileBottomNav.css  navbar.css
frontend/src/hooks/: usePhoneLayout.js
frontend/src/theme/: ThemeContext.jsx  ThemeToggle.jsx  themeToggle.css  useBrandLogo.js
scripts/: inspect_market.py  market_full.py  order_book.py  refresh_markets.py  seed_markets.py  seed_tags.py  try_paper_trading.py
src/polymarket/: config.py  db.py  http_app.py  refresh_catalog.py
src/polymarket/api/: cache.py  client.py  markets.py  prices.py
src/polymarket/auth/: __init__.py  access.py  passwords.py  tokens.py  users_db.py
src/polymarket/catalog/: market_detail.py  order_books.py  queries.py
src/polymarket/db/: __init__.py  connection.py  schema.py  sql.py
src/polymarket/http/: __init__.py  app.py  common.py  deps.py  schemas.py
src/polymarket/trading/: __init__.py  pricing.py  service.py
tests/: conftest.py
tests/integration/: test_trading_live.py
tests/unit/: conftest.py  test_catalog_queries.py  test_config_settings.py  test_db.py  test_http_app.py  test_market_detail.py  test_trading_service.py  test_users_soft_delete.py
tests/unit/api/: test_cache.py  test_markets.py  test_prices.py
tests/unit/routers/: conftest.py  (+7 more)
(+69 files in other folders)
